[package]
name = "cardano_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
clap = { version = "4.0", features = ["derive"] }
pallas-addresses = "0.19.0-alpha.2"